[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fin-mat-library"
version = "0.1.0"
description = "A Python library for financial math. Includes: pricing derivatives, simulating stochastic processes, and analyzing fixed income instruments."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Daniel Butler" }]

dependencies = [
  "numpy>=1.24",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "jupyter>=1.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["fixed_income*", "options*", "portfolio*", "pricing*", "processes*"]
namespaces = true

[tool.pytest.ini_options]
testpaths = ["tests"]