[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finmat"
version = "0.1.0"
description = "A financial math library for options pricing, stochastic processes, and fixed income analytics"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Daniel Butler", email = "danielbutler245@gmail.com"}]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/dbu79/fin-mat-library"